--- a/package.json
+++ b/package.json
@@ -25,5 +25,13 @@
     "eslint": "^6.8.0",
     "nodemon": "^2.0.3",
     "prettier": "^2.0.5"
+  },
+  "dependencies": {
+    "axios": "^0.19.2",
+    "dotenv": "^8.2.0",
+    "express": "^4.17.1",
+    "express-handlebars": "^4.0.4",
+    "mysql2": "^2.1.0",
+    "sequelize": "^5.21.8"
   }
 }
