--- a/package.json
+++ b/package.json
@@ -25,5 +25,14 @@
     "eslint": "^6.8.0",
     "nodemon": "^2.0.3",
     "prettier": "^2.0.5"
+  },
+  "dependencies": {
+    "bcryptjs": "^2.4.3",
+    "express": "^4.17.1",
+    "express-session": "^1.17.1",
+    "mysql2": "^2.1.0",
+    "passport": "^0.4.1",
+    "passport-local": "^1.0.0",
+    "sequelize": "^5.21.8"
   }
 }
