--- a/package.json
+++ b/package.json
@@ -8,7 +8,7 @@
   },
   "scripts": {
     "test": "echo \"Error: no test specified\" && exit 1",
-    "lint": "eslint **/*.js --quiet"
+    "lint": "eslint config/**/*.js models/**/*.js routes/**/*.js --quiet"
   },
   "repository": {
     "type": "git",
@@ -35,4 +35,5 @@
     "passport-local": "^1.0.0",
     "sequelize": "^5.21.8"
   }
+
 }
