--- a/package.json
+++ b/package.json
@@ -2,11 +2,12 @@
   "name": "project2",
   "version": "1.0.0",
   "description": "",
-  "main": "index.js",
+  "main": "server.js",
   "directories": {
     "test": "test"
   },
   "scripts": {
+    "start": "nodemon src/server.js",
     "test": "echo \"Error: no test specified\" && exit 1",
     "lint": "eslint config/**/*.js models/**/*.js routes/**/*.js --quiet"
   },
@@ -23,7 +24,7 @@
   "homepage": "https://github.com/Hot-Fixers/Project2#readme",
   "devDependencies": {
     "eslint": "^6.8.0",
-    "nodemon": "^2.0.3",
+    "nodemon": "^2.0.4",
     "prettier": "^2.0.5"
   },
   "dependencies": {
