--- a/.eslintrc.json
+++ b/.eslintrc.json
@@ -2,7 +2,8 @@
     "env": {
       "browser": true,
       "commonjs": true,
-      "node": true
+      "node": true,
+      "es6": true
     },
 
     "rules": {
@@ -19,7 +20,11 @@
       "no-unused-vars": "error",
       "camelcase": "error",
       "indent": ["error", 2],
-      "semi": ["error", "always"]
+      "semi": ["error", "always"],
+      "parserOptions": {
+        "ecmaVersion": 8
+      }
 
     }
   }
+
