--- a/.eslintrc.json
+++ b/.eslintrc.json
@@ -20,7 +20,7 @@
       "no-unused-vars": "error",
       "camelcase": "error",
       "indent": ["error", 2],
-      "semi": ["error", "always"],
+      "semi": ["error", "always"]
 
     }
   }
