--- a/.eslintrc.json
+++ b/.eslintrc.json
@@ -2,7 +2,8 @@
     "env": {
       "browser": true,
       "commonjs": true,
-      "node": true
+      "node": true,
+      "es6": true
     },
 
     "rules": {
@@ -20,6 +21,11 @@
       "camelcase": "error",
       "indent": ["error", 2],
       "semi": ["error", "always"]
-
+    },
+    "parserOptions": {
+      "ecmaVersion": 2018
     }
-  }
+  
+
+
+}
