--- a/package.json
+++ b/package.json
@@ -28,6 +28,7 @@
     "prettier": "^2.0.5"
   },
   "dependencies": {
+    "@google-cloud/vision": "^1.11.0",
     "axios": "^0.19.2",
     "bcryptjs": "^2.4.3",
     "dotenv": "^8.2.0",
