--- a/package.json
+++ b/package.json
@@ -7,7 +7,7 @@
     "test": "test"
   },
   "scripts": {
-    "start": "nodemon src/server.js",
+    "start": "server.js",
     "test": "echo \"Error: no test specified\" && exit 1",
     "lint": "eslint config/**/*.js models/**/*.js routes/**/*.js --quiet"
   },
