--- a/.eslintrc.json
+++ b/.eslintrc.json
@@ -19,8 +19,7 @@
       "no-multi-spaces": "error",
       "no-unused-vars": "error",
       "camelcase": "error",
-      "indent": ["error", 2],
-      "semi": ["error", "always"]
+      "indent": ["error", 2]
 
     },
     "parserOptions": {
